finish skills section

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- Canonical Link -->
-    <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }" />
+    <link rel="canonical" href=" { { https://www.denmau.me } }{ { index.html } }"/>
 
     <!-- bootstrap -->
     <!--    <link-->
@@ -15,7 +15,7 @@
     <!--      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"-->
     <!--      crossorigin="anonymous"-->
     <!--    />-->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <!-- animate -->
     <!--    <link-->
     <!--            rel="stylesheet"-->
@@ -31,7 +31,7 @@
     <!--    />-->
 
     <!-- Main stylesheet -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
     <title>Dennis Kamau | Full Stack ML Engineer</title>
 
     <!-- Restrict protocol to https-->
@@ -43,21 +43,22 @@
 </head>
 
 <body>
-    <div class="container-fluid background-black">
-        <div class="container">
-            <!-- Navigation bar -->
-            <nav class="navbar navbar-expand-md background-black">
-                <a href="https://www.denmau.me" class="branding">
+<div class="container-fluid background-black">
+    <div class="container">
+        <!-- Navigation bar -->
+        <nav class="navbar navbar-expand-md background-black">
+            <a href="https://www.denmau.me" class="branding">
                 denmau
             </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="img/menu.png" alt="menu" class="h-100">
             </button>
 
-                <div class="collapse navbar-collapse text-right" id="navbarText">
-                    <div class="navbar-nav ml-auto flex-nowrap">
-                        <a class="nav-item nav-link active" href="https://www.denmau.me">Home</a
+            <div class="collapse navbar-collapse text-right" id="navbarText">
+                <div class="navbar-nav ml-auto flex-nowrap">
+                    <a class="nav-item nav-link active" href="https://www.denmau.me">Home</a
                     >
                     <a class="nav-item nav-link" href="#aboutMe"
                     >Projects</a
@@ -96,64 +97,64 @@
         <p class="section-sub-title">
             Web Development
         </p>
-        <div class="row border border-dark">
-            <div class="col-sm-4">
+        <div class="container cards-container">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/html.png" alt="html" height="68">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/css.png" alt="css" height="66">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/javascript.png" alt="javascript" height="66">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/python.png" alt="python" height="66">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/django.png" alt="django" height="75">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/php.png" alt="php" height="40">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/mysql.png" alt="mysql" height="35">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/powerbi.png" alt="powerbi" height="69">
                     </div>
                 </div>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-6">
                 <div class="card">
                     <div class="card-body">
                         <img src="img/android.png" alt="android" height="68">
@@ -164,7 +165,7 @@
         <p class="section-sub-title">
             Machine Learning & AI
         </p>
-        <div class="row border border-dark">
+        <div class="container ml-skills-container">
             <div class="col-sm-4">
                 <div class="card">
                     <div class="card-body">
@@ -194,7 +195,7 @@
                 </div>
             </div>
         </div>
-        <p>I am familiar with Android development, Java, C / C++, Sass, AWS and GCP (Google Cloud Platform)</p>
+        <p class="more-skills">I am familiar with Android development, Java, C / C++, Sass, AWS and GCP (Google Cloud Platform)</p>
     </div>
 </section>
 
@@ -218,41 +219,42 @@
                         </div>
                         <div class="card-footer">
                             <a href="" class="btn btn-outline-secondary">View on GitHub</a>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col">
-                                <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
-                            </div>
-                            <div class="col">
-                                <p>Food Fit</p>
-                                <img src="img/java.png" alt="java">
-                                <img src="img/firebase.png" alt="firebase">
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <a href="" class="btn btn-outline-secondary">View on GitHub</a>
                         </div>
                     </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col">
+                                    <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
+                                </div>
+                                <div class="col">
+                                    <p>Food Fit</p>
+                                    <img src="img/java.png" alt="java">
+                                    <img src="img/firebase.png" alt="firebase">
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <a href="" class="btn btn-outline-secondary">View on GitHub</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+            </div>
         </div>
     </div>
-    </div>
-    </div>
-    </section>
+</section>
 
-    <!-- Contact Me Section start -->
-    <section id="contactMe">
-        <div class="container">
-            <h2>Contact Me</h2>
+<!-- Contact Me Section start -->
+<section id="contactMe">
+    <div class="container">
+        <h2>Contact Me</h2>
 
-            <!-- Contact Form Start -->
-            <form action="https://send.pageclip.co/e76zC4PmHNLeDcDrHMbqag1y9aLlyG6O/leave-message" class="pageclip-form border border-success px-2" method="post">
-                <div class="form-container">
-                    <div class="form-group row">
-                        <label for="your_name" class="form-label">Name</label
+        <!-- Contact Form Start -->
+        <form action="https://send.pageclip.co/e76zC4PmHNLeDcDrHMbqag1y9aLlyG6O/leave-message"
+              class="pageclip-form border border-success px-2" method="post">
+            <div class="form-container">
+                <div class="form-group row">
+                    <label for="your_name" class="form-label">Name</label
                     >
                     <input
                             required
@@ -265,23 +267,23 @@
                 </div>
                 <div class="form-group row">
                     <label for="your_email" class="form-label">Email</label>
-                        <input required type="email" class="form-control" name="email" id="your_email" placeholder="Email Address" />
-                    </div>
-                    <div class="form-group row">
-                        <label for="your_message" class=form-label "
-                    >Message</label
-                    >
+                    <input required type="email" class="form-control" name="email" id="your_email"
+                           placeholder="Email Address"/>
+                </div>
+                <div class="form-group row">
+                    <label for="your_message" class="form-label"
+                    >Message</label>
                     <textarea
                             required
-                            name="message "
+                            name="message"
                             class="form-control "
-                            id="your_message "
-                            placeholder="Message "
+                            id="your_message"
+                            placeholder="Message"
                     ></textarea>
                 </div>
                 <div class="row ">
                     <button
-                            type="submit "
+                            type="submit"
                             class="pageclip-form__submit btn btn-primary btn-form-submit rounded "
                     >
                         <span>Send Message</span>
