finish skills section

--- a/index.html
+++ b/index.html
@@ -161,41 +161,52 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <p class="more-skills">I am familiar with Android development, Java, C / C++, Sass, AWS and GCP (Google
+                    Cloud
+                    Platform)</p>
+            </div>
         </div>
+    </div>
+    <div class="container">
         <p class="section-sub-title">
             Machine Learning & AI
         </p>
-        <div class="container ml-skills-container">
-            <div class="col-sm-4">
-                <div class="card">
-                    <div class="card-body">
-                        <p>Computer Vision</p>
-                    </div>
+
+        <div class="ml-skills-container">
+            <div class="card">
+                <div class="card-body">
+                    <p>Machine Learning & Deep Learning</p>
+                    <!-- I avoided assigning 'text-muted' class to this text since it has a bootstrap meaning.-->
+                    <!-- instead I chose the class 'muted-text', to be able to style it.-->
+                    <p class="muted-text">Tensorflow, Keras</p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <div class="card-body">
-                        <p>Convolutional Neural nets</p>
-                    </div>
+            <div class="card">
+                <div class="card-body">
+                    <p>Computer Vision</p>
+                    <!-- I avoided assigning 'text-muted' class to this text since it has a bootstrap meaning.-->
+                    <!-- instead I chose the class 'muted-text', to be able to style it.-->
+                    <p class="muted-text">openCV</p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <div class="card-body">
-                        <p>Natural Language Processing</p>
-                    </div>
+            <div class="card">
+                <div class="card-body">
+                    <p>Natural Language Processing</p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="card">
-                    <div class="card-body">
-                        <p>Sequences, Time Series and Prediction</p>
-                    </div>
+            <div class="card">
+                <div class="card-body">
+                    <p>Sequences, Time Series and Prediction</p>
                 </div>
             </div>
+
+            <p>I am a certified <a
+                    href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof" target="_blank">DeepLearning.ai
+                Tensorflow Developer</a>. I enjoy building Machine Learning models with Tensorflow.</p>
+            <p>I am currently preparing and looking into getting <a href="https://www.tensorflow.org/certificate" target="_blank">Tensorflow
+                certified</a>.</p>
         </div>
-        <p class="more-skills">I am familiar with Android development, Java, C / C++, Sass, AWS and GCP (Google Cloud Platform)</p>
     </div>
 </section>
 
@@ -203,7 +214,7 @@
 <section id="projects">
     <div class="container-fluid">
         <div class="container">
-            <h2>Projects</h2>
+            <h2 class="section-title">Projects</h2>
             <div class="row">
                 <div class="card">
                     <div class="card-body">
@@ -317,7 +328,7 @@
         <div class="container ">
             <p>All rights reserved | Copyright © 2021</p>
             <p>Naivasha, Kenya</p>
-            <p>icons by Flaticon & imgmonstr, hero image from undraw</p>
+            <p>icons by Flaticon & iconmonstr, hero image from undraw</p>
 
             <div class="row ">
 
