add FoodFit project

--- a/index.html
+++ b/index.html
@@ -202,9 +202,11 @@
             </div>
 
             <p>I am a certified <a
-                    href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof" target="_blank">DeepLearning.ai
+                    href="https://www.coursera.org/account/accomplishments/professional-cert/QP3343SDDDGG?utm_product=prof"
+                    target="_blank">DeepLearning.ai
                 Tensorflow Developer</a>. I enjoy building Machine Learning models with Tensorflow.</p>
-            <p>I am currently preparing and looking into getting <a href="https://www.tensorflow.org/certificate" target="_blank">Tensorflow
+            <p>I am currently preparing and looking into getting <a href="https://www.tensorflow.org/certificate"
+                                                                    target="_blank">Tensorflow
                 certified</a>.</p>
         </div>
     </div>
@@ -212,46 +214,97 @@
 
 <!-- Projects -->
 <section id="projects">
-    <div class="container-fluid">
+    <div class="container-fluid background-black border border-danger">
         <div class="container">
             <h2 class="section-title">Projects</h2>
-            <div class="row">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col">
-                                <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
-                            </div>
-                            <div class="col">
-                                <p>Food Fit</p>
-                                <img src="img/java.png" alt="java">
-                                <img src="img/firebase.png" alt="firebase">
-                            </div>
+            <div class="card-deck">
+                <div class="card mb-2">
+                    <div class="row">
+                        <div class="col">
+                            <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="400" width="200">
                         </div>
-                        <div class="card-footer">
-                            <a href="" class="btn btn-outline-secondary">View on GitHub</a>
+                        <div class="col space-equally-vertically">
+                            <div><p class="card-title">Food Fit</p></div>
+                            <div><img src="img/java.png" alt="java" height="51" width="37"/></div>
+                            <div><img src="img/firebase.png" alt="firebase" height="55" width="40"/></div>
                         </div>
                     </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="col">
-                                    <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
-                                </div>
-                                <div class="col">
-                                    <p>Food Fit</p>
-                                    <img src="img/java.png" alt="java">
-                                    <img src="img/firebase.png" alt="firebase">
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <a href="" class="btn btn-outline-secondary">View on GitHub</a>
-                            </div>
-                        </div>
+                    <div class="card-body">
+                        <p class="card-text">Food Fit is a Java <span class="color-red">Android App</span> that gives you
+                            access to 5000+<span class="color-red">*</span> recipes, each
+                            with nutritional information.
+                            Users can search for or view random recipes.
+                            Recipes are fetched from an <span class="color-red">API</span>.
+                            The app uses <span class="color-red">Firebase</span> for Authentication: login, signup and
+                            password reset.</p>
+                        <p class="card-text"><small class="text-muted"><span class="color-red">*</span> Although the App
+                            has capacity to display 5000+
+                            recipes, I am using a free plan of the API with a capped number of recipe-requests per
+                            month.</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This card has even longer content than the first to show that equal
+                            height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+
+    <!--            ##############################################################################-->
+
+    <div class="row">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
+                    </div>
+                    <div class="col">
+                        <p>Food Fit</p>
+                        <img src="img/java.png" alt="java">
+                        <img src="img/firebase.png" alt="firebase">
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a href="" class="btn btn-outline-secondary">View on GitHub</a>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <img src="img/FoodFitScreenshot1.png" alt="foodfit app" height="218">
+                        </div>
+                        <div class="col">
+                            <p>Food Fit</p>
+                            <img src="img/java.png" alt="java">
+                            <img src="img/firebase.png" alt="firebase">
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <a href="" class="btn btn-outline-secondary">View on GitHub</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
 </section>
 
